# mediainfoAndroid

./: .gitignore  LICENSE  README.md  settings.gradle
.github/workflows/: build.yml  release.yml
dependencies/MediaInfoLib/Source/Example/: HowToUse_Dll.java
dependencies/MediaInfoLib/Source/MediaInfoDLL/: MediaInfoJNI.cpp
dependencies/Resource/Plugin/Language/: en.csv
mediainfo-lib/: CMakeLists.txt  build.gradle  consumer-rules.pro  proguard-rules.pro
mediainfo-lib/src/main/: AndroidManifest.xml
mediainfo-lib/src/main/java/net/mediaarea/mediainfo/lib/: MediaInfo.kt  MediaInfoUtil.kt
